# pbr-viewer

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  workflow.py  xmake.lua
assets/scenes/: hello_triangle.scene  sanbox.scene
assets/shaders/: frame_present.shader  gaussian_blur.shader  hello_triangle.shader  pbr.shader  universal-pbr.shader  universal_soild.shader
include/: Light.h  Model.cxx  Model.h  SceneManager.cxx  SceneManager.h  SkyBox.h  camera.cxx  camera.h  fshelf.h  gltf_loader.hpp
include/core/: contain_gl.h  framebuffer.cxx  framebuffer.h  indexbuffer.cxx  indexbuffer.h  shader.cxx  shader.h  texture.cxx  texture.h  vertexbuffer.cxx  vertexbuffer.h
include/utils/: console.h  imgui_utils.h  ticker.h
src/: main.cpp  main.cxx
